# lightcurve-imputation

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run_all.py  setup.py
.github/workflows/: ci.yml
configs/: experiment.yaml  experiment.yml  fast_test.yml
data/analysis_data/: synthetic_lightcurve.csv
data/corrupted_data/: gap_10.csv  gap_30.csv  gap_50.csv
data/masks/: mask_10.csv  mask_30.csv  mask_50.csv
docs/: architecture.md  index.md  methodology.md  modules.md  workflow.md
notebooks/: 01_exploratory_data_analysis.ipynb  01_signal_generation.ipynb  03_imputation_methods.ipynb
notebooks/current/: 01_generate_synthetic_lightcurve.ipynb  02_MCAR_Gap_Injection.ipynb  03_Exploratory_Data_Analysis.ipynb  04_Mean_Fill.ipynb  05_Forward_Fill.ipynb  06_Linear_Interpolation.ipynb  07_Cubic_Spline_Interpolation.ipynb
notebooks/old/: 02_imputation_methods_demo.ipynb  02_missing_data.ipynb  03_results_analysis.ipynb  04_evaluation_statistics.ipynb
scripts/: download_data.py  generate_figures.py  generate_tables.py  run_experiment.py  run_single_method.py  run_statistical_tests.py
src/: __init__.py
src/classification/: classifier.py
src/data/: download.py  gap_injection.py  preprocessing.py
src/evaluation/: __init__.py  aggregator.py  metrics.py
src/features/: extraction.py
src/imputation/: __init__.py  base.py  classical.py  deterministic.py  gain_imputer.py  gb_mice.py  gp_imputer.py  knn_imputer.py  mf_imputer.py  ml_imputers.py  registry.py  rf_imputer.py  rnn_imputer.py  saits_imputer.py  ts_mice.py
src/missingness/: __init__.py  injector.py
tests/: __init__.py  test_evaluation.py  test_features_and_metrics.py  test_gap_injection.py  test_imputation.py  test_imputers.py  test_missingness.py  test_simulation.py  test_statistics.py  test_utils.py
(+15 files in other folders)
