[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightcurve-imputation"
version = "1.0.0"
description = "Simulation-based evaluation of missing-data imputation methods for astronomical light curves"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Adrita Khan", email = "adrita.khan@example.com" }
]
keywords = ["astronomy", "light curves", "imputation", "missing data", "time series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10"
dependencies = [
    "numpy==1.24.3",
    "scipy==1.10.1",
    "scikit-learn==1.3.0",
    "george==0.4.0",
    "xgboost==1.7.6",
    "torch==2.0.1",
    "matplotlib==3.7.1",
    "pandas==2.0.2",
    "astropy==5.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "joblib>=1.2.0",
    "scikit-posthocs>=0.7.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.23.0",
]

[project.scripts]
lc-impute = "src.pipeline.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
